user-apps/media/stremio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stremio
  labels:
    app: stremio
spec:
  replicas: 0
  selector:
    matchLabels:
      app: stremio
  template:
    metadata:
      labels:
        app: stremio
        netpol.cilium.io/egress-to-kube-dns: "true"
        netpol.cilium.io/egress-to-world: "true"
        netpol.cilium.io/ingress-from-ingress: "true"
    spec:
      containers:
        - name: stremio
          image: tsaridas/stremio-docker:v1.3.11
          ports:
            - name: webgui
              containerPort: 8080
            - name: server
              containerPort: 11470  # Stremio server  http port
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          volumeMounts:
            - name: stremio-data
              mountPath: /srv/stremio-config
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 64Mi
      volumes:
        - name: stremio-data
          persistentVolumeClaim:
            claimName: stremio-pvc
