user-apps/media/stremio/service-gui.yaml
apiVersion: v1
kind: Service
metadata:
  name: stremio-gui
spec:
  selector:
    app: stremio
  ports:
    - protocol: TCP
      port: 8080
      targetPort: webgui
