user-apps/media/stremio/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: stremio-server
spec:
  selector:
    app: stremio
  ports:
    - protocol: TCP
      port: 11470
      targetPort: server
