user-apps/media/stremio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stremio
spec:
  selector:
    app: stremio
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
