user-apps/media/stremio/http-route-gui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stremio-gui
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Stremio
    gethomepage.dev/icon: https://raw.githubusercontent.com/Stremio/stremio-brand/refs/heads/master/logos/SVG/stremio-logo-icon-only-fullcolor.svg
    gethomepage.dev/href: https://stremio.tamhomelab.com
    gethomepage.dev/description: Watch Films and Series
    gethomepage.dev/pod-selector: "app=stremio"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - "stremio.tamhomelab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: stremio-gui
          port: 8080
          weight: 1
